# authentication_rust

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  todo.md
.github/workflows/: ci.yml
.sqlx/: query-d7389d3dc59843d322c0ca23eb24e975b14934ee0296badf683e2a6ab24ff217.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: .gitkeep  0001_create_users.sql
src/: lib.rs  main.rs  startup.rs
src/common/: configuration.rs  db.rs  error.rs  mod.rs  telemetry.rs
src/features/: mod.rs
src/features/authentication/: credentials.rs  hashing.rs  mod.rs  validate.rs
src/features/login/: error.rs  flash.rs  handler.rs  mod.rs  service.rs  view.rs
src/features/password_change/: error.rs  handler.rs  mod.rs  service.rs
src/features/registration/: error.rs  handler.rs  mod.rs  service.rs  types.rs
src/features/registration/tests/: .gitkeep
src/features/sessions/: config.rs  error.rs  middleware.rs  mod.rs  store.rs  typed_session.rs
tests/: credential_auth.rs  health_check.rs
tests/common/: mod.rs
